--- a/src/Dash.Web/package.json
+++ b/src/Dash.Web/package.json
@@ -18,13 +18,17 @@
   "dependencies": {
     "axios": "^0.15.3",
     "core-js": "^2.5.3",
+    "luxon": "^1.11.4",
     "moment": "^2.24.0",
     "vue": "^2.5.16",
+    "vue-datetime": "^1.0.0-beta.10",
+    "vue-notification": "^1.3.16",
     "vue-router": "^2.8.1",
     "vue-server-renderer": "^2.5.16",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^2.5.0",
-    "vuex-router-sync": "^4.3.2"
+    "vuex-router-sync": "^4.3.2",
+    "weekstart": "^1.0.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
@@ -54,13 +58,13 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^2.2.4",
+    "jquery": "^3.3.1",
     "node-sass": "^4.8.2",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "popper.js": "^1.14.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.2",
-    "url-loader": "^0.5.9",
+    "url-loader": "^1.1.2",
     "vue-loader": "^14.2.2",
     "webpack": "^2.7.0",
     "webpack-hot-middleware": "^2.21.2"
