--- a/src/Dash.Web/package.json
+++ b/src/Dash.Web/package.json
@@ -24,6 +24,7 @@
     "vue-datetime": "^1.0.0-beta.10",
     "vue-notification": "^1.3.16",
     "vue-router": "^2.8.1",
+    "vue-search-select": "^2.8.3",
     "vue-server-renderer": "^2.5.16",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^2.5.0",
