--- a/src/Dash.Web/package.json
+++ b/src/Dash.Web/package.json
@@ -21,6 +21,7 @@
     "luxon": "^1.11.4",
     "moment": "^2.24.0",
     "vue": "^2.5.16",
+    "vue-content-placeholders": "^0.2.1",
     "vue-datetime": "^1.0.0-beta.10",
     "vue-notification": "^1.3.16",
     "vue-router": "^2.8.1",
